--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
 </head>
 <body class="bg-black text-gray-900 overflow-x-hidden">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
